crates/valen-parser/tests/snapshots/parser__import_with_alias.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"import java.util.HashMap as HMap;\")"
---
=== AST ===
[
    Import(
        ImportDecl {
            path: [
                "java",
                "util",
                "HashMap",
            ],
            alias: Some(
                "HMap",
            ),
            span: Span {
                start: 0,
                end: 33,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
