crates/valen-parser/tests/snapshots/parser__lambda_inferred_types.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() { xs.map(|x| x); }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [
                        ExprSemi(
                            MethodCall(
                                MethodCallExpr {
                                    receiver: Path(
                                        Path {
                                            segments: [
                                                PathSegment {
                                                    name: "xs",
                                                    double_colon: false,
                                                    generics: [],
                                                    span: Span {
                                                        start: 9,
                                                        end: 11,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 9,
                                                end: 11,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                    method: "map",
                                    generics: [],
                                    args: [
                                        CallArg {
                                            name: None,
                                            value: Lambda(
                                                LambdaExpr {
                                                    params: [
                                                        LambdaParam {
                                                            name: "x",
                                                            ty: None,
                                                            span: Span {
                                                                start: 17,
                                                                end: 18,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    return_type: None,
                                                    body: Path(
                                                        Path {
                                                            segments: [
                                                                PathSegment {
                                                                    name: "x",
                                                                    double_colon: false,
                                                                    generics: [],
                                                                    span: Span {
                                                                        start: 20,
                                                                        end: 21,
                                                                        file_id: FileId(
                                                                            0,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 20,
                                                                end: 21,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 16,
                                                        end: 21,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 16,
                                                end: 21,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 9,
                                        end: 22,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                    ],
                    tail: None,
                    span: Span {
                        start: 7,
                        end: 25,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 25,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
